; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-device.c_pdf_dev_clip_stroke_path.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-device.c_pdf_dev_clip_stroke_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"W n\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*, i32, i32)* @pdf_dev_clip_stroke_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pdf_dev_clip_stroke_path(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load i32*, i32** %8, align 8
  store i32* %15, i32** %13, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i32*, i32** %13, align 8
  %18 = call i32 @pdf_dev_end_text(i32* %16, i32* %17)
  %19 = load i32*, i32** %7, align 8
  %20 = load i32*, i32** %13, align 8
  %21 = call i32 @pdf_dev_push(i32* %19, i32* %20)
  %22 = load i32*, i32** %7, align 8
  %23 = load i32*, i32** %13, align 8
  %24 = load i32, i32* %11, align 4
  %25 = call i32 @pdf_dev_ctm(i32* %22, i32* %23, i32 %24)
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %13, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = call i32 @pdf_dev_path(i32* %26, i32* %27, i32* %28)
  %30 = load i32*, i32** %13, align 8
  %31 = call %struct.TYPE_3__* @CURRENT_GSTATE(i32* %30)
  store %struct.TYPE_3__* %31, %struct.TYPE_3__** %14, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @fz_append_string(i32* %32, i32 %35, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @pdf_dev_end_text(i32*, i32*) #1

declare dso_local i32 @pdf_dev_push(i32*, i32*) #1

declare dso_local i32 @pdf_dev_ctm(i32*, i32*, i32) #1

declare dso_local i32 @pdf_dev_path(i32*, i32*, i32*) #1

declare dso_local %struct.TYPE_3__* @CURRENT_GSTATE(i32*) #1

declare dso_local i32 @fz_append_string(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
